--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -1,3 +1,4 @@
+@use "../styles/variables" as *;
 * {
     box-sizing: border-box;
     font-family: "Outfit", sans-serif;
@@ -7,6 +8,7 @@
   
   html {
     font-size: 16px;
+    background-color: $background;
   }
   
   h1 {
