--- a/client/src/components/PageTop/PageTop.scss
+++ b/client/src/components/PageTop/PageTop.scss
@@ -1,4 +1,29 @@
-.pagetop__logo{
+@use "../../styles/mixins" as *;
+@use "../../styles/typography" as *;
+@use "../../styles/variables" as *;
+
+.pagetop {
+    width: 100%;
+  &-logo {
     width: 5rem;
     height: 5rem;
+  }
+  &-section{
+    width: 100%;
+    height:10rem;
+    background-color: $blue;
+    border-radius: 3rem;
+    
+    h1{
+        color: $white;
+        padding-top: 1rem;
+    }
+    h3{
+        color: $white;
+        margin-left:0;
+        padding: 0.5rem;
+      }
+
+  }
+
 }
