--- a/client/src/components/PageTop/PageTop.scss
+++ b/client/src/components/PageTop/PageTop.scss
@@ -3,27 +3,34 @@
 @use "../../styles/variables" as *;
 
 .pagetop {
-    width: 100%;
+  width: 100%;
   &-logo {
     width: 5rem;
     height: 5rem;
   }
-  &-section{
+  &-section {
     width: 100%;
-    height:10rem;
+    height: 10rem;
     background-color: $blue;
     border-radius: 3rem;
-    
-    h1{
-        color: $white;
-        padding-top: 1rem;
+
+    h1 {
+      color: $white;
+      padding-top: 1rem;
     }
-    h3{
-        color: $white;
-        margin-left:0;
-        padding: 0.5rem;
-      }
-
+    h3 {
+      color: $white;
+      margin-left: 0;
+      padding: 0.5rem;
+    }
   }
-
+  &-container {
+    display: flex;
+    margin:1rem;
+    h3 {
+      color: $black;
+      text-align: left;
+      margin-left:1rem ;
+    }
+  }
 }
