--- a/client/src/components/PageTop/PageTop.scss
+++ b/client/src/components/PageTop/PageTop.scss
@@ -9,7 +9,8 @@
     height: 5rem;
   }
   &-section {
-    width: 100%;
+    margin: 1rem;
+    width: auto;
     height: 10rem;
     background-color: $blue;
     border-radius: 3rem;
@@ -26,11 +27,12 @@
   }
   &-container {
     display: flex;
-    margin:1rem;
+    margin: 1rem 2rem;
+    align-items: center;
     h3 {
       color: $black;
       text-align: left;
-      margin-left:1rem ;
+      margin-left: 1rem;
     }
   }
 }
