--- a/client/src/components/PageTop/PageTop.scss
+++ b/client/src/components/PageTop/PageTop.scss
@@ -27,12 +27,17 @@
   }
   &-container {
     display: flex;
-    margin: 1rem 2rem;
+    margin: 1rem 1.6rem;
     align-items: center;
     h3 {
       color: $black;
       text-align: left;
       margin-left: 1rem;
     }
+  }
+  &-vector{
+    width:2.5rem;
+    height:2.5rem;
+    margin-left: 0.5rem;
   }
 }
