--- a/client/src/components/button/SwipeButton/SwipeButton.scss
+++ b/client/src/components/button/SwipeButton/SwipeButton.scss
@@ -53,7 +53,20 @@
     z-index: 2;
     transition: width 0.001s;
   }
-}
+  &-clinic-info{
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    z-index: 1;
+  }
+  }
+
 
 h2 {
   margin-left: 6rem;
