--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -9,9 +9,9 @@
   left: 1rem;
   right: 1rem;
   margin-bottom: 1rem;
-  margin-top:2rem;
+  margin-top: 2rem;
   bottom: 0;
-  background-color: $white;
+  background-color: none;
   border-radius: 10rem;
   display: flex;
   justify-content: center;
@@ -30,10 +30,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: $red;
+    border-radius: 0.5rem;
     &:hover {
       background-color: $blue;
-      border-radius: 10rem;
-      padding: 0.3rem;
+      border-radius: 0.5rem;
+      padding: 0.2rem;
       color: $white;
       font-weight: 900;
       margin-right: 1rem;
@@ -43,18 +45,19 @@
     width: 2.5rem;
     height: 2.5rem;
     padding: 0.5rem;
-    background-color: $red;
-    border-radius: 100%;
   }
   &__navigation {
     width: 2.5rem;
     height: 2.5rem;
     padding: 0.5rem;
-    background-color: $red;
-    border-radius: 100%;
   }
   &__text {
-    padding: 0.5rem;
+    padding: 0.5rem 0.8rem 0.5rem 0rem;
     font-weight: 600;
+    color: $white;
+    font-size: 0.7rem;
+  }
+  a {
+    text-decoration: none;
   }
 }
