--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -1,4 +1,53 @@
-.homepage-textarea{
+@use "../../styles/globals" as *;
+@use "../../styles/mixins" as *;
+@use "../../styles/typography" as *;
+@use "../../styles/variables" as *;
+
+.homepage{
+    &-form{
+        padding:1rem;
+    }
+&-textarea{
     width: 100%;
-    margin:1rem ;
+    border-radius: 0.5rem;
+    padding:0.5rem 1rem 0.5rem 1.2rem;
+    font-size: 1rem;
+    border: none;
+    resize: none;
+    height: 3rem;
 }
+&-heading{
+    margin-left: 0;
+    margin-right: 6rem;
+}
+&-button{
+    border:none;
+    background-color: $blue;
+    color: $white;
+    font-size: 1rem;
+    margin-top:1rem;
+    width: 100%;
+    padding:0.8rem;
+    border-radius: 0.5rem;
+}
+&-answer-area{
+    background-color: $white;
+    width:97%;
+    padding:1rem;
+    border-radius: 0.5rem;
+    display:flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+&-answer-title{
+margin-left:0.2rem;
+text-align: left;
+margin-bottom: 1rem;
+}
+&-answer-response{
+    text-align: left;
+    font-weight: 500;
+    font-size: 0.8rem;
+}
+}
+
