--- a/client/src/components/button/SwipeButton/SwipeButton.scss
+++ b/client/src/components/button/SwipeButton/SwipeButton.scss
@@ -14,7 +14,7 @@
     transform: translate(-50%);
     width: 3.8rem;
     height: 3.8rem;
-    background-color: $light-red;
+    background-color: #ff1c27;
     border-radius: 2rem;
     display: flex;
     align-items: center;
@@ -24,9 +24,7 @@
     transition: transform 0.1s;
 
     .swipe-icon {
-      background-color: $white;
-      border-radius: 100%;
-      height: 2.5rem;
+      height: 1.5rem;
       width: 2.5rem;
     }
   }
