--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -19,6 +19,7 @@
 &-heading{
     margin-left: 0;
     margin-right: 6rem;
+    color:$black;
 }
 &-button{
     border:none;
@@ -32,7 +33,7 @@
 }
 &-answer-area{
     background-color: $white;
-    width:97%;
+    margin: 0 1rem;
     padding:1rem;
     border-radius: 0.5rem;
     display:flex;
