--- a/client/src/components/button/SwipeButton/SwipeButton.scss
+++ b/client/src/components/button/SwipeButton/SwipeButton.scss
@@ -51,20 +51,23 @@
     z-index: 2;
     transition: width 0.001s;
   }
-  &-clinic-info{
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #fff;
-    padding: 5px 10px;
+  &-clinic-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $white;
+    margin: 0.5rem;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     text-align: center;
     z-index: 1;
-  }
-  }
+    padding: 0 1rem;
 
+    h3 {
+      width: 100%;
+      padding: 0 !important;
+    }
+  }
+}
 
 h2 {
   margin-left: 6rem;
