--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -4,7 +4,7 @@
 @use "../../styles/variables" as *;
 
 .navbar {
-  position: fixed;
+  position: sticky;
   height: 3.2rem;
   left: 1rem;
   right: 1rem;
