minor change for bg color

--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -8,7 +8,8 @@
   
   html {
     font-size: 16px;
-    background-color: $background;
+    background: url(../../src/assets/icons/bg.png);
+    background-size: fit;
   }
   
   h1 {
