--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -17,7 +17,7 @@
     border-radius: 0.5rem;
     padding:0.5rem 1rem 0.5rem 1.2rem;
     font-size: 1rem;
-    border: none;
+    border: .1rem solid $grey;
     resize: none;
     height: 3rem;
 }
