--- a/client/src/pages/NavigationPage/NavigationPage.scss
+++ b/client/src/pages/NavigationPage/NavigationPage.scss
@@ -13,7 +13,7 @@
     font-size: 1rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
-    border: 0.0625rem;
+    border: .1rem solid $grey;
     margin-top:1rem;
   }
   &-form {
