changed bg size

--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -9,7 +9,7 @@
   html {
     font-size: 16px;
     background: url(../../src/assets/icons/bg.png);
-    background-size: fit;
+    background-size: contain;
   }
   
   h1 {
