--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -44,6 +44,7 @@
     display:flex;
     flex-direction: column;
     flex-grow: 1;
+
 }
 &-answer-title{
 margin-left:0.2rem;
@@ -54,5 +55,18 @@ margin-bottom: 1rem;
     text-align: left;
     font-weight: 500;
     font-size: 0.8rem;
+    max-width:100%;
+    white-space: pre-wrap;
+    overflow: auto;
+    line-height: 1.5;
+    font-size: 1rem;
+    
 }
+// pre{
+//     white-space: pre-wrap;
+//     overflow: auto;
+//     line-height: 1.5;
+//     font-size: 1rem;
+// }
 }
+
