1. formatted files with prettiers 2. renamed some className based on BEM 3. Deleted empty mixin.scss

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,13 +1,13 @@
-$blue: #0173BC;
+$blue: #0173bc;
 $light-blue: rgba(1, 115, 188, 0.25);
 $orange: #ffa75e;
 $black: #474749;
-$white:  #FFFFFF;
-$grey: #E1E2E3;
-$dark-grey: #7C7D80;
-$med-grey: #C7C8CA;
+$white: #ffffff;
+$grey: #e1e2e3;
+$dark-grey: #7c7d80;
+$med-grey: #c7c8ca;
 $dark-red: #950f39;
-$red: #990D3A;
+$red: #990d3a;
 $background: rgba(0, 0, 0, 0.08);
-$light-red:red;
+$light-red: red;
 $mobile-breakpoint: 390px;
