--- a/client/src/components/SwipeButton/SwipeButton.scss
+++ b/client/src/components/SwipeButton/SwipeButton.scss
@@ -1,7 +1,6 @@
-@use "../../../styles/globals" as *;
-@use "../../../styles/mixins" as *;
-@use "../../../styles/typography" as *;
-@use "../../../styles/variables" as *;
+@use "../../styles/globals" as *;
+@use "../../styles/typography" as *;
+@use "../../styles/variables" as *;
 
 .swipe {
   display: flex;
