--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -1,72 +1,64 @@
 @use "../../styles/globals" as *;
-@use "../../styles/mixins" as *;
 @use "../../styles/typography" as *;
 @use "../../styles/variables" as *;
 
-.main-container{
-    display:flex;
-    flex-direction:column;
-    flex-grow:1;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.homepage {
+  &-form {
+    padding: 1rem;
   }
-.homepage{
-    &-form{
-        padding:1rem;
-    }
-&-textarea{
+  &-textarea {
     width: 100%;
     border-radius: 0.5rem;
-    padding:0.5rem 1rem 0.5rem 1.2rem;
+    padding: 0.5rem 1rem 0.5rem 1.2rem;
     font-size: 1rem;
-    border: .1rem solid $grey;
+    border: 0.1rem solid $grey;
     resize: none;
     height: 3rem;
-}
-&-heading{
+  }
+  &-heading {
     margin-left: 0;
     margin-right: 6rem;
-    color:$black;
-}
-&-button{
-    border:none;
+    color: $black;
+  }
+  &-button {
+    border: none;
     background-color: $blue;
     color: $white;
     font-size: 1rem;
-    margin-top:1rem;
+    margin-top: 1rem;
     width: 100%;
-    padding:0.8rem;
+    padding: 0.8rem;
     border-radius: 0.5rem;
+  }
+  &__answer {
+    &-area {
+      background-color: $white;
+      margin: 0 1rem;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+    }
+    &-title {
+      margin-left: 0.2rem;
+      text-align: left;
+      margin-bottom: 1rem;
+    }
+    &-response {
+      text-align: left;
+      font-weight: 500;
+      font-size: 0.8rem;
+      max-width: 100%;
+      white-space: pre-wrap;
+      overflow: auto;
+      line-height: 1.5;
+      font-size: 1rem;
+    }
+  }
 }
-&-answer-area{
-    background-color: $white;
-    margin: 0 1rem;
-    padding:1rem;
-    border-radius: 0.5rem;
-    display:flex;
-    flex-direction: column;
-    flex-grow: 1;
-
-}
-&-answer-title{
-margin-left:0.2rem;
-text-align: left;
-margin-bottom: 1rem;
-}
-&-answer-response{
-    text-align: left;
-    font-weight: 500;
-    font-size: 0.8rem;
-    max-width:100%;
-    white-space: pre-wrap;
-    overflow: auto;
-    line-height: 1.5;
-    font-size: 1rem;
-    
-}
-// pre{
-//     white-space: pre-wrap;
-//     overflow: auto;
-//     line-height: 1.5;
-//     font-size: 1rem;
-// }
-}
-
