--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -34,6 +34,9 @@
     width: 100%;
     padding: 0.8rem;
     border-radius: 0.5rem;
+    &:hover{
+        background-color: $red;
+    }
   }
   &__answer {
     &-area {
